# face_tracker_project

devel/: .catkin  local_setup.sh  setup.sh
devel/include/face_tracker_pkg/: centroid.h
devel/lib/basics_camera/: basics_camera_node
devel/lib/pkgconfig/: basics_camera.pc  face_tracker_pkg.pc  stepper_control.pc
devel/lib/python3/dist-packages/face_tracker_pkg/msg/: _centroid.py
devel/lib/stepper_control/: stepper_control_node
devel/share/basics_camera/cmake/: basics_camera-msg-paths.cmake  basics_cameraConfig.cmake
devel/share/face_tracker_pkg/cmake/: face_tracker_pkg-msg-paths.cmake  face_tracker_pkgConfig.cmake
devel/share/gennodejs/ros/face_tracker_pkg/msg/: centroid.js
devel/share/roseus/ros/face_tracker_pkg/: manifest.l
devel/share/stepper_control/cmake/: stepper_control-msg-extras.cmake  stepper_control-msg-paths.cmake  stepper_controlConfig.cmake
src/basics_camera/: CMakeLists.txt
src/basics_camera/config/: track.yaml
src/basics_camera/src/: basics_camera.cpp
src/face_tracker_pkg/launch/: start_tracking.launch
src/face_tracker_pkg/src/: face_tracker_node.cpp
src/stepper_control/: CMakeLists.txt  package.xml
src/stepper_control/config/: control.yaml
src/stepper_control/src/: stepper_control.cpp
